# graph-specs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  cliff.toml
.cfdb/: cfdb.rev  cross-fixture.toml
.cfdb/queries/: arch-ban-unwrap-domain-ports.cypher  arch-context-no-application-in-domain.cypher  arch-context-no-cross-layer-unwrap.cypher  arch-context-no-syn-in-domain.cypher
.gitea/workflows/: ci.yml  cross-bump.yml  cross-loop.yml  mirror-to-github.yml  release.yml
.github/workflows/: contributor-ci.yml
.proofs/: audit-13.txt  audit-23.txt  audit-7.txt  cfdb-14-determinism.txt  cfdb-14-extract.txt  cfdb-14-green.txt  cfdb-14-inject-bite.txt  cfdb-v04-inject-bite-application-in-domain.txt  cfdb-v04-inject-bite-cross-layer-unwrap.txt  cfdb-v04-inject-bite-syn-in-domain.txt  clippy-22.txt  clippy-23.txt  clippy-24.txt  clippy-25.txt  clippy-26.txt  clippy-27.txt  clippy-9.txt  clippy-complexity-9.txt  clippy-pedantic-7.txt  clippy-pedantic-9.txt  dogfood-24-self-check.txt  dogfood-7-self-check.txt  dogfood-9-self-check.txt  green-13-ndjson-domain.txt  green-13.txt  green-22.txt  green-23.txt  green-24.txt  green-25.txt  green-26.txt  green-27.txt  green-28.txt  green-7-cli-injectbite.txt  green-7-domain-cycle1.txt  green-7-markdown-cycle2.txt  green-7-normalize-cycle2.txt  green-7-workspace-cycle2.txt  green-9-cli-cycle4.txt  green-9-domain-cycle1.txt  green-9-final.txt  (+39 more)
adapters/markdown/: Cargo.toml
adapters/markdown/src/: contexts.rs  contexts_tests.rs  lib.rs  markdown_utils.rs  tests.rs
adapters/rust/: Cargo.toml
adapters/rust/src/: edges.rs  lib.rs  normalize.rs
application/: Cargo.toml
application/src/: lib.rs  main.rs  ndjson.rs  text.rs
application/tests/: cli.rs
ci/: cfdb-determinism-check.sh  cross-bump-dry-run-test.sh  cross-bump.sh  cross-dogfood.sh  cross-loop-dry-run-test.sh  cross-loop.sh  read-cross-fixture-sha-test.sh  read-cross-fixture-sha.sh
docs/: cross-fixture-bump.md
docs/rfc/: 001-bounded-context-equivalence.md  002-cross-dogfood.md  003-oss-readiness.md  004-multi-language-adapter-contract.md
domain/: Cargo.toml
domain/src/: context.rs  diff.rs  lib.rs  tokens.rs
domain/src/diff/: context.rs  context_tests.rs  edge.rs  signature.rs  tests.rs
ports/: Cargo.toml
ports/src/: lib.rs
ports/tests/: context_reader.rs
scripts/: release-prepare.sh
specs/: dialect.md  ndjson-output.md
specs/concepts/: core.md
specs/contexts/: equivalence.md  orchestration.md  reading.md
