[package]
name = "application"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
domain = { workspace = true }
ports = { workspace = true }
adapter-markdown = { workspace = true }
adapter-rust = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "graph-specs"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
