[package]
name = "adapter-rust"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
domain = { workspace = true }
ports = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
